--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
         .card-edit-number { font-size: 14px; font-weight: 600; color: var(--primary); }
         .btn-delete-card { background: var(--danger); color: white; padding: 5px 12px; border: none; border-radius: 5px; font-size: 12px; font-weight: 600; cursor: pointer; transition: all 0.3s; }
         .btn-edit-card { background: var(--primary); color: white; padding: 5px 12px; border: none; border-radius: 5px; font-size: 12px; font-weight: 600; cursor: pointer; transition: all 0.3s; }
-        .card-inline-editor { margin-top: 12px; padding: 14px; border: 2px dashed var(--border); border-radius: 10px; background: var(--panel); }
-        .card-inline-editor .actions { display: flex; gap: 8px; margin-top: 10px; }
+        .card-inline-editor openEditCard(i);
+		return;
         .btn-save-card { background: linear-gradient(135deg, var(--accent) 0%, var(--accent-2) 100%); color: #fff; border: none; border-radius: 6px; padding: 8px 14px; font-weight: 700; cursor: pointer; }
         .btn-cancel-card { background: var(--border); color: var(--text); border: none; border-radius: 6px; padding: 8px 14px; font-weight: 700; cursor: pointer; }
         .btn-edit-current { background: linear-gradient(135deg, var(--primary) 0%, var(--primary-2) 100%); color: #fff; border: none; border-radius: 8px; padding: 10px 16px; font-weight: 700; cursor: pointer; }
