--- a/index.html
+++ b/index.html
@@ -720,6 +720,11 @@
             font-weight: 500;
         }
 
+		.card-inline-editor,
+		.card-edit-item {
+			display: none !important;
+		}
+
         /* COMPARATOR STYLES */
         #comparatorModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 2000; overflow: auto; }
         #comparatorModal.show { display: block; }
