--- a/index.html
+++ b/index.html
@@ -2370,6 +2370,7 @@
 			
             loadUserData();
 			initApp();
+			refreshUserUI();
         }
 
         function loadUserData() {
@@ -2445,6 +2446,29 @@
 
             document.getElementById('authPage').style.display = 'flex';
         }
+
+		function refreshUserUI() {
+			if (!currentUser) return;
+
+			const userNameElement = document.getElementById('userName');
+			if (userNameElement && currentUser.username) {
+				userNameElement.textContent = currentUser.username;
+			}
+
+			const userStatusElement = document.getElementById('userStatus');
+			if (userStatusElement) {
+				userStatusElement.textContent = currentUser.guest ? 'Invité' : 'Membre';
+			}
+
+			const avatarDiv = document.getElementById('userAvatar');
+			if (avatarDiv) {
+				if (currentUser.avatar) {
+					avatarDiv.innerHTML = `<img src="${currentUser.avatar}" alt="${currentUser.username}" style="width:100%;height:100%;object-fit:cover;">`;
+				} else {
+					avatarDiv.textContent = (currentUser.username || '?').charAt(0).toUpperCase();
+				}
+			}
+		}
 
         // ====== NOTIFICATIONS ======
         function showNotification(message, type = 'info') {
