--- a/index.html
+++ b/index.html
@@ -257,12 +257,23 @@
         .toggle-icon { transition: transform 0.3s ease; display: inline-block; }
         .toggle-sidebar-btn.sidebar-hidden .toggle-icon { transform: rotate(180deg); }
 
-        .main-content { margin-left: 280px; flex: 1; padding: 40px; overflow-y: auto; height: 100vh; transition: margin-left 0.3s ease; }
+        .main-content {
+			flex: 1;
+			width: 100%;
+		}
+		
         .main-content.sidebar-hidden { margin-left: 0; }
 
-        .container { background: var(--panel); border-radius: 20px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); padding: 40px; max-width: 800px; margin: 0 auto; color: var(--text); }
-
-        .app-header { background: var(--panel); border-radius: 20px 20px 0 0; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); padding: 20px 40px; max-width: 800px; margin: 0 auto 20px auto; display: flex; justify-content: space-between; align-items: center; }
+		.container {
+			max-width: none !important;
+			width: 100% !important;
+			margin: 0 !important;
+		}
+       	.app-header {
+			max-width: none !important;
+			width: 100% !important;
+			margin: 0 0 20px 0 !important;
+		}
         .app-header h1 { margin: 0; font-size: 22px; color: var(--text); }
         .app-header p { margin: 0; font-size: 13px; color: var(--text-soft); }
 
