--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
 			max-width: none !important;
 			width: 100% !important;
 			margin: 0 0 20px 0 !important;
+			padding-left: 24px !important;
+			padding-right: 24px !important;
 		}
         .app-header h1 { margin: 0; font-size: 22px; color: var(--text); }
         .app-header p { margin: 0; font-size: 13px; color: var(--text-soft); }
