--- a/index.html
+++ b/index.html
@@ -270,11 +270,10 @@
 			margin: 0 !important;
 		}
        	.app-header {
-			max-width: none !important;
+			max-width: 1200px !important; /* ajuste: 1000 / 1200 / 1400 */
+			margin-left: auto !important;
+			margin-right: auto !important;
 			width: 100% !important;
-			margin: 0 0 20px 0 !important;
-			padding-left: 24px !important;
-			padding-right: 24px !important;
 		}
         .app-header h1 { margin: 0; font-size: 22px; color: var(--text); }
         .app-header p { margin: 0; font-size: 13px; color: var(--text-soft); }
@@ -451,9 +450,9 @@
 		.course-card {
 			width: 100% !important;
 		}
+		
 		.main-content {
-			max-width: none !important;
-			width: 100% !important;
+			width: 100%;
 		}
 		
 		.container {
