--- a/index.html
+++ b/index.html
@@ -758,6 +758,25 @@
 			margin: 0 auto 20px auto !important;
 		}
 
+		/* Centre tous les containers visibles dans le contenu principal */
+		#mainContent .container,
+		#mainContent .app-header {
+			max-width: 1200px !important;
+			width: 100% !important;
+			margin: 0 auto !important;   /* <-- centrage garanti */
+		}
+
+		/* Empêche les vieux margins qui décalent */
+		#mainContent {
+			display: block;
+		}
+
+		#mainContent .container,
+		#mainContent .app-header {
+			padding-left: 24px !important;
+			padding-right: 24px !important;
+		}
+
         /* COMPARATOR STYLES */
         #comparatorModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 2000; overflow: auto; }
         #comparatorModal.show { display: block; }
