--- a/index.html
+++ b/index.html
@@ -801,6 +801,55 @@
 			margin: 0 auto !important;
 		}
 
+		.card-edit-item .card-inline-editor {
+			display: grid;
+			grid-template-columns: 1fr 220px; /* éditeur | panneau */
+			gap: 12px;
+			align-items: start;
+		}
+
+		.format-panel{
+			background: var(--panel-muted);
+			border: 1px solid var(--border);
+			border-radius: 10px;
+			padding: 10px;
+		}
+
+		.format-title{
+			font-size: 11px;
+			font-weight: 800;
+			color: var(--text-soft);
+			text-align: center;
+			margin-bottom: 8px;
+			letter-spacing: .6px;
+		}
+
+		.format-grid-3{ display:grid; grid-template-columns: repeat(3, 1fr); gap:6px; margin-bottom:10px; }
+		.format-grid-2{ display:grid; grid-template-columns: 1fr 1fr; gap:6px; }
+
+		.format-subtitle{ font-size: 10px; color: var(--text-soft); text-align:center; margin: 6px 0 4px; }
+		.format-mini-label{ font-size: 9px; color: var(--text-soft); text-align:center; margin-bottom:3px; }
+
+		.format-select{
+			width: 100%;
+			padding: 6px;
+			border: 1px solid var(--border);
+			border-radius: 6px;
+			background: var(--panel);
+			font-size: 12px;
+		}
+
+		.format-hint{
+			margin-top: 8px;
+			padding: 6px;
+			border: 1px dashed var(--border);
+			border-radius: 6px;
+			font-size: 10px;
+			color: var(--text-soft);
+			text-align: center;
+			background: var(--panel);
+		}
+
         /* COMPARATOR STYLES */
         #comparatorModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 2000; overflow: auto; }
         #comparatorModal.show { display: block; }
@@ -2264,6 +2313,8 @@
 		let editMode = false;
 		let editTargetIndex = null;
 		let importanceFilter = ['important','normal','pas important','explication'];
+		let activeInlineEditIndex = null;
+		let activeInlineSide = 'question'; 
         window.activeImportanceFilter = [];
         window.currentImportance = 'normal';
 
@@ -2329,6 +2380,19 @@
             showNotification('Connecté en tant qu\'invité', 'success');
 			
         }
+
+		function setActiveInlineEditor(i, side) {
+			activeInlineEditIndex = i;
+			activeInlineSide = side;
+			const el = document.getElementById(side === 'answer' ? `editAnswer${i}` : `editQuestion${i}`);
+			if (el) el.focus();
+		}
+
+		function syncInlineImportance(i) {
+			const sel = document.getElementById(`inlineImportance${i}`);
+			const original = document.getElementById(`editImportance${i}`);
+			if (sel && original) original.value = sel.value;
+		}
 
         function showRegister() {
             document.getElementById('loginForm').style.display = 'none';
@@ -3571,6 +3635,20 @@
                 `;
                 cardsList.appendChild(cardDiv);
             });
+			// APRES avoir rendu toutes les cartes dans #cardsList
+			document.querySelectorAll('#cardsList .card-edit-item').forEach(cardItem => {
+				const i = Number(cardItem.dataset.index);
+				if (!Number.isInteger(i)) return;
+
+				// Evite doublon
+				if (cardItem.querySelector(`.format-panel[data-format-for="${i}"]`)) return;
+
+				cardItem.querySelector('.card-inline-editor')?.insertAdjacentHTML('afterend', renderFormatPanel(i));
+
+				const inlineSel = document.getElementById(`inlineImportance${i}`);
+				const origSel = document.getElementById(`editImportance${i}`);
+				if (inlineSel && origSel) inlineSel.value = origSel.value;
+			});
         }
 
         function deleteCard(idx) {
@@ -3619,6 +3697,53 @@
             cardElement.innerHTML = '';
             cardElement.appendChild(editorDiv);
         }
+
+		function renderFormatPanel(i) {
+			// i = index de la fiche (0,1,2...)
+			return `
+				<div class="format-panel" data-format-for="${i}">
+					<div class="format-title">FORMAT</div>
+
+					<div class="format-grid-3">
+						<button class="editor-btn" type="button" onclick="execFormatCommand('bold')"><b>G</b></button>
+						<button class="editor-btn" type="button" onclick="execFormatCommand('italic')"><i>I</i></button>
+						<button class="editor-btn" type="button" onclick="execFormatCommand('underline')"><u>S</u></button>
+					</div>
+
+					<div class="format-subtitle">Couleurs</div>
+					<div class="format-grid-2">
+						<div>
+							<div class="format-mini-label">Texte</div>
+							<input type="color" value="#000000"
+								onchange="applyColorToSelection('foreColor', this.value)"
+								onclick="setActiveInlineEditor(${i}, 'question')">
+						</div>
+						<div>
+							<div class="format-mini-label">Fond</div>
+							<input type="color" value="#ffff00"
+								onchange="applyColorToSelection('backColor', this.value)"
+								onclick="setActiveInlineEditor(${i}, 'question')">
+						</div>
+					</div>
+
+					<div class="format-subtitle">Importance</div>
+					<select class="format-select" id="inlineImportance${i}"
+						onchange="syncInlineImportance(${i})">
+						<option value="important">Important</option>
+						<option value="normal">Normal</option>
+						<option value="pas important">Pas important</option>
+						<option value="explication">Explication</option>
+					</select>
+
+					<div class="format-grid-2" style="margin-top:6px;">
+						<button class="editor-btn" type="button" onclick="setActiveInlineEditor(${i}, 'question'); insertImage()">🖼️ Image</button>
+						<button class="editor-btn" type="button" onclick="clearFormatNow()">✖</button>
+					</div>
+
+					<div class="format-hint">Sélectionne du texte puis clique.</div>
+				</div>
+			`;
+		}
 
         function saveEditedCard(i) { openEditCard(i); saveUserData(); } 
 		function cancelEditCard(i) { /* rien ou masquer l’inline */ }
