--- a/index.html
+++ b/index.html
@@ -1592,6 +1592,15 @@
 			flex-basis: 24px !important;
 			padding: 0 !important;
 		}
+		#cardsList .format-panel{
+			display: block !important;
+			visibility: visible !important;
+			opacity: 1 !important;
+			position: relative !important;
+			z-index: 9999 !important;
+			border: 2px solid red !important; /* temporaire pour voir */
+			background: white !important;
+		}
     </style>
 </head>
 <body onload="checkAuth()">
