--- a/index.html
+++ b/index.html
@@ -3094,7 +3094,7 @@
 
 		function editCard(i) {
 			openEditCard(i);
-			showInlineFormatPanel(i);
+			setTimeout(() => showInlineFormatPanel(i), 0);
 		}
 
         function closeRenameListModal() {
