--- a/index.html
+++ b/index.html
@@ -2347,11 +2347,41 @@
 		let importanceFilter = ['important','normal','pas important','explication'];
 		let activeInlineEditIndex = null;
 		let activeInlineSide = 'question';
-		let savedRange = null;
         window.activeImportanceFilter = [];
         window.currentImportance = 'normal';
 
         const GIF_KNOWN_URL = 'https://www.gif-vif.com/trending/cursed-mario-cursed';
+
+		let savedRange = null;
+
+		function saveSelection() {
+			const sel = window.getSelection();
+			if (!sel || sel.rangeCount === 0) return;
+			savedRange = sel.getRangeAt(0).cloneRange();
+		}
+
+		function restoreSelection() {
+			if (!savedRange) return false;
+			const sel = window.getSelection();
+			sel.removeAllRanges();
+			sel.addRange(savedRange);
+			return true;
+		}
+
+		document.addEventListener('mouseup', (e) => {
+			if (e.target.closest('.editor-content')) saveSelection();
+		});
+
+		document.addEventListener('keyup', (e) => {
+			if (e.target.closest('.editor-content')) saveSelection();
+		});
+
+		function applyColorToSelection(cmd, color) {
+			restoreSelection();
+			document.execCommand(cmd, false, color);
+			saveSelection();
+		}
+		
 
         // ====== FONCTIONS D'AUTHENTIFICATION ======
         function login() {
@@ -2625,35 +2655,6 @@
             loadTheme();
             showPage('home');
         }
-
-		function saveSelection() {
-			const sel = window.getSelection();
-			if (!sel || sel.rangeCount === 0) return;
-			savedRange = sel.getRangeAt(0).cloneRange();
-		}
-
-		document.addEventListener('mouseup', (e) => {
-		if (e.target.closest('.editor-content')) saveSelection();
-		});
-
-		document.addEventListener('keyup', (e) => {
-			if (e.target.closest('.editor-content')) saveSelection();
-		});
-
-		function restoreSelection() {
-			if (!savedRange) return false;
-			const sel = window.getSelection();
-			sel.removeAllRanges();
-			sel.addRange(savedRange);
-			return true;
-		}
-
-		function applyColorToSelection(cmd, color) {
-			// cmd = 'foreColor' ou 'backColor'
-			restoreSelection();
-			document.execCommand(cmd, false, color);
-			saveSelection(); // re-sauvegarde après modification
-		}
 
         function checkAuth() {
             loadUserData();
