--- a/index.html
+++ b/index.html
@@ -2439,7 +2439,7 @@
             localStorage.setItem('current_user', JSON.stringify(currentUser));
 
             showApp();
-			initApp()
+			initApp();
             showNotification('Connecté en tant qu\'invité', 'success');
 			
         }
